--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,3 +1,19 @@
 baseURL: https://example.org/
 languageCode: en-us
-title: My New Hugo Site
+title: ACME hugo
+theme: PaperMod
+author:
+  facebook: "https://facebook.com/example"
+  twitter: "https://twitter.com/example"
+
+menu:
+  main:
+    - identifier: about
+      name: About
+      url: /about
+      weight: 100
+    - identifier: contact
+      name: contact
+      url: /contact
+      weight: 200
+
