--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -9,11 +9,15 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-24.04
+    permissions:
+      content: write
+      pull-requests: write
+
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      
+     
       - name: Setup hugo
         uses: peaceiris/actions-hugo@v2
         with:
