--- a/config.yaml
+++ b/config.yaml
@@ -2,6 +2,7 @@ baseURL: https://example.org/
 languageCode: en-us
 title: ACME hugo
 theme: PaperMod
+enableEmoji: true
 author:
   facebook: "https://facebook.com/example"
   twitter: "https://twitter.com/example"
